--- a/vignettes/CARNIVAL-vignette.Rnw
+++ b/vignettes/CARNIVAL-vignette.Rnw
@@ -86,7 +86,47 @@ CARNIVAL refines a quantitative objective function for ILP problem by incorporat
 \clearpage
 
 \subsection{ILP solvers}
-\emph{CARNIVAL} is an extension of the previously implemented Causal Reasoning method from Melas et al.~\cite{Melas}.The network inference process is swiftly performed with an Integer Linear Programming (ILP) formulation of causal reasoning using two solvers: the open-source mixed integer programming solver \emph{Cbc} (Coin-or branch and cut)(see \url{https://projects.coin-or.org/Cbc}); or the \emph{CPLEX optimizer} from \emph{IBM} (see \url{https://www.ibm.com/analytics/cplex-optimizer}) which can be obtained for free through the Academic Initiative. To perform the analysis, the users will then need to store the binary \emph{cbc} or \emph{cplex} executables on any directory they wish. The binary files of \emph{cbc} can be found by first downloading one of the optimization suites provided here: \url{https://www.coin-or.org/download/binary/OptimizationSuite/}, unzip the download and from there save the \emph{cbc} executable (which can be found on the \emph{bin} directory) file on any of the direcotries they wish of their machines. As for the \emph{cplex}, after registration on the \emph{ILOG CPLEX Optimization Studio} here: \url{https://my15.digitalexperience.ibm.com/b73a5759-c6a6-4033-ab6b-d9d4f9a6d65b/dxsites/151914d1-03d2-48fe-97d9-d21166848e65/technology/data-science}. Samilar like before, users will have to find the \emph{cplex} executable binary file and save on a directory of their own wish.
+\emph{CARNIVAL} is an extension of the previously implemented Causal Reasoning method from Melas et al.~\cite{Melas}.The network inference process is swiftly performed with an Integer Linear Programming (ILP) formulation of causal reasoning using two solvers: the open-source mixed integer programming solver \emph{Cbc} (Coin-or branch and cut)(see \url{https://projects.coin-or.org/Cbc}); or the \emph{CPLEX optimizer} from \emph{IBM} (see \url{https://www.ibm.com/analytics/cplex-optimizer}) which can be obtained for free through the Academic Initiative. To perform the analysis, the users will then need to store the binary \emph{cbc} or \emph{cplex} executables on any directory they wish. The binary files of \emph{cbc} can be found by first downloading one of the optimization suites provided here: \url{https://www.coin-or.org/download/binary/OptimizationSuite/}, unzip the download and from there save the \emph{cbc} executable (which can be found on the \emph{bin} directory) file on any of the direcotries they wish of their machines. As for the \emph{cplex}, the executable file can be obtained after registration on the \emph{ILOG CPLEX Optimization Studio} here: \url{https://my15.digitalexperience.ibm.com/b73a5759-c6a6-4033-ab6b-d9d4f9a6d65b/dxsites/151914d1-03d2-48fe-97d9-d21166848e65/technology/data-science}. Samilar like before, users will have to find the \emph{cplex} executable binary file and save on a directory of their own wish or keep them on their default installation paths. The path to interactive version of \emph{CPLEX} is differed based on the operating system. The default installation path for each OS is as follows:
+
+1) For Mac OS: "~/Applications/IBM/ILOG/CPLEX_Studio129/cplex/bin/x86-64_osx/cplex" -- Note that the version of \emph{CPLEX} has to be changed accordingly (the latest version is \emph{CPLEX_Studio129})
+
+2) For Linux: "/opt/ibm/ILOG/CPLEX_Studio129/cplex/bin/x86-64_linux/cplex"
+
+3) For Windows: "C:/Program Files/IBM/ILOG/CPLEX_Studio129/cplex/bin/x64_win64/cplex.exe"
+
+\subsection{Citation}
+\emph{CARNIVAL} can be cited as follows:
+
+Liu, A., Trairatphisan, P., Gjerga, E. et al. From expression footprints to causal pathways: contextualizing large signaling networks with CARNIVAL. npj Syst Biol Appl 5, 40 (2019) doi:10.1038/s41540-019-0118-z
+
+\clearpage
+
+\section{Getting Started}
+A tutorial for preparing \emph{CARNIVAL} input files starting from differentially gene expression (DEG) and for running the \emph{CARNIVAL} pipeline are provided as vignettes in R-Markdown, R-script and HTML formats. The wrapper script \emph{runCARNIVAL} was introduced to take input arguments, pre-process input descriptions, run optimisation and export results as network figures. Three built-in \emph{CARNIVAL} examples are also supplied as case studies for users. Moreover processed gene expression values (besides differential values) can also be used as an input to \emph{CARNIVAL} but examples are not provided in this vignette.
+
+\subsection{Prerequisites}
+Besides the above mentioned solvers, users need also to install the following R-package dependencies: \emph{readr}(see \url{https://cran.r-project.org/web/packages/readr/index.html}); \emph{igraph}(see \url{https://igraph.org/r/}); \emph{readxl}(see \urel{https://readxl.tidyverse.org/}).
+
+\subsection{Installation}
+\emph{CARNIVAL} is currently available for the installation as an R-package from our GitHub page.
+
+<<eval=FALSE, pgf=TRUE, echo=TRUE>>=
+# Install CARNIVAL from Github using devtools
+# install.packages('devtools') # in case devtools hasn't been installed
+library(devtools)
+install_github('saezlab/CARNIVAL', build_vignettes = TRUE)
+# or download the source file from GitHub and install from source
+install.packages('path_to_extracted_CARNIVAL_directory', repos = NULL, type="source")
+@
+
+\subsection{Documentation}
+After successfully installing \emph{CARNIVAL}, its documentation can be accessed as follows.
+
+<<eval=FALSE, pgf=TRUE, echo=TRUE>>=
+# Install CARNIVAL from Github using devtools
+# install.packages('devtools') # in case devtools hasn't been installed
+vignette("CNORode-vignette")
+@
 
 \begin{thebibliography}{}
 
