--- a/vignettes/CARNIVAL-vignette.Rnw
+++ b/vignettes/CARNIVAL-vignette.Rnw
@@ -90,18 +90,18 @@ CARNIVAL refines a quantitative objective function for ILP problem by incorporat
 
 1) For Mac OS:
 <<eval=FALSE, pgf=TRUE, echo=TRUE>>=
-~/Applications/IBM/ILOG/CPLEX_Studio129/cplex/bin/x86-64_osx/cplex
+"~/Applications/IBM/ILOG/CPLEX_Studio129/cplex/bin/x86-64_osx/cplex"
 @
 Note that the version of \emph{CPLEX} has to be changed accordingly (the latest version is \emph{CPLEX_Studio129})
 
 2) For Linux:
 <<eval=FALSE, pgf=TRUE, echo=TRUE>>=
-/opt/ibm/ILOG/CPLEX_Studio129/cplex/bin/x86-64_linux/cplex
+"/opt/ibm/ILOG/CPLEX_Studio129/cplex/bin/x86-64_linux/cplex"
 @
 
 3) For Windows:
 <<eval=FALSE, pgf=TRUE, echo=TRUE>>=
-C:/Program Files/IBM/ILOG/CPLEX_Studio129/cplex/bin/x64_win64/cplex.exe
+"C:/Program Files/IBM/ILOG/CPLEX_Studio129/cplex/bin/x64_win64/cplex.exe"
 @
 
 \subsection{Citation}
