--- a/vignettes/CARNIVAL-vignette.Rnw
+++ b/vignettes/CARNIVAL-vignette.Rnw
@@ -137,6 +137,54 @@ After successfully installing \emph{CARNIVAL}, its documentation can be accessed
 vignette("CNORode-vignette")
 @
 
+\subsection{CARNIVAL settings}
+The main function of the \emph{CARNIVAL} apckage is \emph{runCARNIVAL}. This function runs the pipeline by using the user-provided list of inputs or run CARNIVAL built-in examples. These inputs are:
+
+1. \emph{solverPath}: Pointing to the path where the \emph{cplex} or the \emph{cbc} executable files are stored.
+
+2. \emph{netObj}: A matrix or data-frame object containing the prior knowledge networks as a list of directed and signed protein interactions. The first column should contain the source node, the second column should contain the sign of the interaction and the third column should contain the target node.
+
+3. \emph{measObj}:  A matrix or data-frame object containing the measurements (either gene expressions or estimated transcription factor activities).
+
+
+5. \emph{weightObj}: A matrix or data-frame object containing the pathway activity scores as inferred from \emph{runPROGENy}. Default set to NULL.
+
+6. \emph{parallelIdx1}: First index number suitable for parallelisation (numeric). Default set to 1.
+
+7. \emph{parallelIdx2}: Second index number suitable for parallelisation (numeric). Default set to 1.
+
+8. \emph{nodeID}: Define the input format of nodes in the network (either 'uniprot' or 'gene' symbol). Default set to 'uniprot'. Leave it to default if you do not wish to map proteins or if you using other symbols besides gene/uniprot ID's.
+
+9. \emph{UP2GS}: For plotting: define if Uniprot ID will be converted to gene symbols for better readability (logical T/F).
+
+10. \emph{DOTfig}: For plotting: define if DOT figure will be exported in the result folder (logical T/F). Default set to FALSE
+
+11. \emph{timelimit}: Optimization parameter: Time limit of optimisation (in seconds)
+
+12. \emph{mipGAP}: CPLEX parameter: Allowed gap of accepted solution comparing to the best solution (fraction; default: 0.05 = 5 percents).
+
+13. \emph{poolrelGAP}: Optimization parameter: Allowed relative gap of accepted solution comparing within the pool of accepted solution (fraction; Default set to 0.0001)
+
+14. \emph{limitPop}: CPLEX parameter: Allowed number of solutions to be generated (Default set to 500)
+
+15. \emph{poolCap}: CPLEX parameter: Allowed number of solution to be kept in the pool of solution (Default set to 100)
+
+16. \emph{poolIntensity}: CPLEX parameter: Intensity of solution searching (0,1,2,3,4 - Default set to 4)
+
+17. \emph{poolReplace}: CPLEX parameter: Replacement strategy of solutions in the pool (0,1,2 - Default set to 2 = most diversified solutions)
+
+18. \emph{alphaWeight}: Objective function: weight for mismatch penalty (Default set to 1 - will only be applied once measurement file only contains discrete values).
+
+19. \emph{betaWeight}: Objective function: weight for node penalty (Default set to 0.2)
+
+20. \emph{dir_name}: Directory name where the users wishes to save the plotted network as a .DOT figure (in case if DOTfig=TRUE). Default set to "current_working_directory/DOTfigures".
+
+21. \emph{solver}: Solver to use: \emph{cplex} or \emph{cbc} (Default set to \emph{cplex}).
+
+22. \emph{experimental_conditions}: In the case when the user wishes to combine information from multiple experimental conditions, it has to specify which experimental conditions wishes to use. Default set to NULL - in which case \emph{CARNIVAL} will generate as many network solutions as there are rows in the \emph{measObj}, \emph{inputObj} and/or \emph{weightObj}.
+
+While \emph{Cbc} is open-source and can be used from any user, the \emph{CPLEX} solver is more computationally efficient and is able to provide multiple equivalent solutions which are then combined. The  \emph{mipGAP}, \emph{limitPop}, \emph{poolCap}, \emph{poolIntensity} and \emph{poolReplace} make sense only if \emph{CPLEX} solver is used to train the networks.
+
 \clearpage
 
 \section{Running CARNIVAL}
