--- a/vignettes/CARNIVAL-vignette.Rnw
+++ b/vignettes/CARNIVAL-vignette.Rnw
@@ -274,7 +274,7 @@ load(file = system.file("Ex2_network_SBV_Omnipath.RData",package="CARNIVAL"))
 load(file = system.file("Ex2_weights_SBV_EGF.RData",package="CARNIVAL"))
 @
 
-The \emph{Ex2_measurements_SBV_EGF} object is the same as table generated from the \emph{generate_measfile} function after estimating the Transcription Factor (TF) activites via \emph{DoRothEA}~\cite{dorothea} analysis (see \emph{runDoRothEA} function) as described above. The \emph{Ex2_weights_SBV_EGF} are the normalized estimated pathway activities through \emph{PROGENy}~\cite{progeny} (sign indicating the direction of the regulation) (see \emph{runPROGENy}). The \emph{Ex2_inputs_SBV_EGF} represents the target of the perturbation (activation of EGF on this case). The \emph{Ex2_network_SBV_Omnipath} represents the signed and directed prior knowledge network. The proteins on this case are mapped as \emph{Uniprot ID's}.
+The \emph{measurements} object is the same as table generated from the \emph{generate measfile} function after estimating the Transcription Factor (TF) activites via \emph{DoRothEA}~\cite{dorothea} analysis (see \emph{runDoRothEA} function) as described above. The \emph{weights} are the normalized estimated pathway activities through \emph{PROGENy}~\cite{progeny} (sign indicating the direction of the regulation) (see \emph{runPROGENy}). The \emph{inputs} represents the target of the perturbation (activation of EGF on this case). The \emph{network} object represents the signed and directed prior knowledge network. The proteins on this case are mapped as \emph{Uniprot ID's}.
 
 As a next step, we run the \emph{runCARNIVAL} function to perform the analysis as shown below. We allow a maximal of 1 hour timelimit to perform the analysis, although it will only take few minutes. Also we ask the solver to give us 100 (\emph{poolCap}) of the most diverse (\emph{poolReplace}) 500 (\emph{limitPop}) solutions inferred:
 
