--- a/vignettes/CARNIVAL-vignette.Rnw
+++ b/vignettes/CARNIVAL-vignette.Rnw
@@ -302,7 +302,7 @@ result = runCARNIVAL(solverPath=solverPath,
 
 Here we use \emph{CPLEX} solver for running the analysis and it takes up to few minutes. Once the analysis is finished, the returned \emph{result} object contains the resulting weighted network (\emph{weightedSIF} -- combined network solution with weights of interactions telling how often an interaction appears in the pool of solutions); the attributes of each node (\emph{nodesAttributes} -- indicating the average inferred protein activities across the multiple solutions); all the single network solutions inferred (\emph{sifAll}); 
 
-Since we set \emph{DOTfig=TRUE}, the analysis will generate the \emph{.dot} Figure \ref{fig:egf_network} of the network within the default \emph{DOTfig} directory (please use \emph{dir name} variable if you wish to save the network solution at a different directory and on a different name). This figure represents the combined solution network as in the \emph{weightedSIF}. Since the \emph{UP2GS=TRUE}, the generated network will have Gene ID's, otherwise it can be set to \emph{FALSE}. Otherwise if the user is not interested to generate any \emph{.dot} figure, it can as well keep the default \emph{DOTfig=FALSE} for the analysis.
+Since we set \emph{DOTfig=TRUE}, the analysis will generate the \emph{.dot} file as visualized in Figure \ref{fig:egf_network} of the network within the default \emph{DOTfig} directory (please use \emph{dir name} variable if you wish to save the network solution at a different directory and on a different name). This figure represents the combined solution network as in the \emph{weightedSIF}. Since the \emph{UP2GS=TRUE}, the generated network will have Gene ID's, otherwise it can be set to \emph{FALSE}. Otherwise if the user is not interested to generate any \emph{.dot} figure, it can as well keep the default \emph{DOTfig=FALSE} for the analysis.
 
 \begin{center}
 \begin{figure}[ht]
